--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "IdentityConnections": "Server = (localdb)\\ProjectModels ; DataBase = AuthIdentity; Integrated Security = True; TrustServerCertificate=True"
+    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True"
   },
 
   "AllowedHosts": "*"
