--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True"
+    "DefaultConnections": "Server=db4843.public.databaseasp.net; Database=db4843; User Id=db4843; Password=D%o6tK4?5@Ci; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
