--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server=db5001.public.databaseasp.net; Database=db5001; User Id=db5001; Password=E=s9!8Fim-2H; Encrypt=False; MultipleActiveResultSets=True;",
+    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True;"
   },
 
   "AllowedHosts": "*"
