--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True;"
+    "DefaultConnections": "Server=db5082.public.databaseasp.net; Database=db5082; User Id=db5082; Password=xX!75=aQEg3#; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
