--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True;"
+    "DefaultConnections": "Server=db5111.public.databaseasp.net; Database=db5111; User Id=db5111; Password=Mm3?_Js2i#7F; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
