--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,7 +19,7 @@
     "DurationInDays": "10"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server=db5111.public.databaseasp.net; Database=db5111; User Id=db5111; Password=Mm3?_Js2i#7F; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnections": "Server=db5170.public.databaseasp.net; Database=db5170; User Id=db5170; Password=d=3G!4Fcf?6Z; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
