--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -18,8 +18,13 @@
     "ValidAudience": "MySecureUsers",
     "DurationInDays": "10"
   },
+    "CloudinarySetting": {
+      "CloudName": "dvz2smvcz",
+      "ApiKey": "343512916744518",
+      "ApiSecret": "s5N1svPshaefFQSZefx63wzwUJc"
+    },
   "ConnectionStrings": {
-    "DefaultConnections": "Server=db5170.public.databaseasp.net; Database=db5170; User Id=db5170; Password=d=3G!4Fcf?6Z; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnections": "Server=db5288.public.databaseasp.net; Database=db5288; User Id=db5288; Password=z#9T?4FmS_c5; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
