--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -8,9 +8,9 @@
   "MailSettings": {
     "Port": 587,
     "SmtpServer": "smtp.gmail.com",
-    "Email": "uosefahmed0022@gmail.com",
+    "Email": "bns360official@gmail.com",
     "DisplayedName": "BSU360",
-    "Password": "mhtl jbqz mwud esph"
+    "Password": "ltrb dyfv rbra imkb"
   },
   "JWT": {
     "Key": "strONGKAutHENTICATIONKEygydasjdsajjkfdsahjhdfjdas",
