--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -19,12 +19,12 @@
     "DurationInDays": "10"
   },
   "CloudinarySetting": {
-    "CloudName": "dvz2smvcz",
-    "ApiKey": "343512916744518",
-    "ApiSecret": "s5N1svPshaefFQSZefx63wzwUJc"
+    "CloudName": "dxgodyp9s",
+    "ApiKey": "414358393846366",
+    "ApiSecret": "gJygtKTGrTPRjjkFCsDRR773F74"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server=db5288.public.databaseasp.net; Database=db5288; User Id=db5288; Password=z#9T?4FmS_c5; Encrypt=False; MultipleActiveResultSets=True;"
+    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True;"
   },
 
   "AllowedHosts": "*"
