--- a/Account.Core/Account.Core.csproj
+++ b/Account.Core/Account.Core.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Win32.SystemEvents" Version="6.0.0" />
+    <PackageReference Include="NPoco" Version="5.7.1" />
   </ItemGroup>
 
 </Project>
