--- a/Account.Apis/appsettings.json
+++ b/Account.Apis/appsettings.json
@@ -24,7 +24,7 @@
     "ApiSecret": "gJygtKTGrTPRjjkFCsDRR773F74"
   },
   "ConnectionStrings": {
-    "DefaultConnections": "Server = (localdb)\\ProjectModels ; DataBase = BNS360DB; Integrated Security = True; TrustServerCertificate=True;"
+    "DefaultConnections": "Server=db5715.public.databaseasp.net; Database=db5715; User Id=db5715; Password=xS?2Q8i%9+Xc; Encrypt=False; MultipleActiveResultSets=True;"
   },
 
   "AllowedHosts": "*"
